--- a/public/global.css
+++ b/public/global.css
@@ -245,6 +245,8 @@ a {color: blue; font-style: italic;}
 
 
 
+
+
 .buttonWrapper {
   position: fixed;
   top: 0px;
@@ -441,7 +443,7 @@ a {color: blue; font-style: italic;}
 
 
 @media screen and (max-width: 1000px) {
-  body {font-size: 3vw;}
+  body {font-size: 3.5vw;}
 
 .biography {
   /*top: calc(20% + 5px);*/
@@ -455,8 +457,13 @@ a {color: blue; font-style: italic;}
   position: absolute;
   top: 0px;
   bottom: 5px;
-  left: 0px;
+  left: 5px;
   width: calc(100% - 10px);
+}
+.biography-text-mobile {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: calc(100vw - 10px);
 }
 .logoBio {
   padding-bottom: 30px;
@@ -498,7 +505,7 @@ a {color: blue; font-style: italic;}
 	display: inline-block;
 	position: relative;
 	width: 100%;
-	height: 70vh;
+	height: 25vh;
 	top: 0px;
 	left: 0px;
 }
